--- a/artemis/package.json
+++ b/artemis/package.json
@@ -47,7 +47,7 @@
     "prettier": "4.0.0-alpha.8",
     "resend": "^3.2.0",
     "socket.io": "^4.7.5",
-    "stripe": "^15.6.0",
+    "stripe": "16.2.0",
     "ua-parser-js": "^1.0.37",
     "utf-8-validate": "^6.0.4",
     "web-push": "^3.6.7"
