--- a/ares/package.json
+++ b/ares/package.json
@@ -30,7 +30,7 @@
     "@nkzw/use-relative-time": "^1.1.0",
     "@sentry/browser": "^7.114.0",
     "@stripe/react-stripe-js": "^2.7.1",
-    "@stripe/stripe-js": "^3.4.0",
+    "@stripe/stripe-js": "4.1.0",
     "fbt": "^1.0.2",
     "framer-motion": "^11.1.9",
     "react": "19.0.0-canary-fd0da3eef-20240404",
