--- a/ares/package.json
+++ b/ares/package.json
@@ -46,7 +46,7 @@
   "devDependencies": {
     "@babel/core": "^7.24.5",
     "@emotion/babel-plugin": "^11.11.0",
-    "@sentry/vite-plugin": "^2.16.1",
+    "@sentry/vite-plugin": "2.21.1",
     "@types/babel__core": "^7.20.5",
     "@types/react": "^18.3.1",
     "@types/react-dom": "^18.3.0",
