--- a/artemis/package.json
+++ b/artemis/package.json
@@ -37,7 +37,7 @@
     "discord.js": "^14.15.2",
     "express": "^4.19.2",
     "express-session": "^1.18.0",
-    "graphql": "^16.8.1",
+    "graphql": "16.9.0",
     "graphql-helix": "^1.13.0",
     "ioredis": "^5.4.1",
     "json-stable-stringify": "^1.1.1",
