--- a/package.json
+++ b/package.json
@@ -55,7 +55,7 @@
   "devDependencies": {
     "@babel/plugin-syntax-typescript": "^7.24.1",
     "@deities/eslint-plugin": "workspace:*",
-    "@ianvs/prettier-plugin-sort-imports": "^4.2.1",
+    "@ianvs/prettier-plugin-sort-imports": "4.3.1",
     "@nkzw/eslint-config": "^1.15.0",
     "@styled/typescript-styled-plugin": "^1.0.1",
     "@swc/core": "^1.5.5",
