Update @types/react, @types/react and more
Updated:
- @types/react from ^18.3.1 to 18.3.3
- @types/react from ^18.3.1 to 18.3.3
- nodemon from ^3.1.0 to 3.1.4
- @vitejs/plugin-react from ^4.2.1 to 4.3.1
- @types/react from ^18.3.1 to 18.3.3
- @types/react from ^18.3.1 to 18.3.3
- @types/react from ^18.3.1 to 18.3.3
- ua-parser-js from ^1.0.37 to 1.0.38
- @types/react from ^18.3.1 to 18.3.3
- @babel/core from ^7.24.5 to 7.24.9


For issues or feature requests: <support@depshub.com>

--- a/package.json
+++ b/package.json
@@ -61,14 +61,14 @@
     "@swc/core": "^1.5.5",
     "@types/fbt": "^1.0.5",
     "@types/node": "^20.12.11",
-    "@vitejs/plugin-react": "^4.2.1",
+    "@vitejs/plugin-react": "4.3.1",
     "babel-plugin-fbt": "^1.0.0",
     "babel-plugin-fbt-import": "^0.1.0",
     "babel-plugin-fbt-runtime": "^1.0.0",
     "chalk": "^5.3.0",
     "dotenv": "^16.4.5",
     "eslint": "^8.57.0",
-    "nodemon": "^3.1.0",
+    "nodemon": "3.1.4",
     "npm-run-all2": "^6.1.2",
     "prettier": "4.0.0-alpha.8",
     "prettier-plugin-packagejson": "^2.5.0",
