--- a/ares/package.json
+++ b/ares/package.json
@@ -44,11 +44,11 @@
     "workbox-window": "^7.1.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.24.5",
+    "@babel/core": "7.24.9",
     "@emotion/babel-plugin": "^11.11.0",
     "@sentry/vite-plugin": "^2.16.1",
     "@types/babel__core": "^7.20.5",
-    "@types/react": "^18.3.1",
+    "@types/react": "18.3.3",
     "@types/react-dom": "^18.3.0",
     "@types/react-relay": "^16.0.6",
     "@types/react-router-dom": "^5.3.3",
