--- a/artemis/package.json
+++ b/artemis/package.json
@@ -48,7 +48,7 @@
     "resend": "^3.2.0",
     "socket.io": "^4.7.5",
     "stripe": "^15.6.0",
-    "ua-parser-js": "^1.0.37",
+    "ua-parser-js": "1.0.38",
     "utf-8-validate": "^6.0.4",
     "web-push": "^3.6.7"
   },
