--- a/deimos/package.json
+++ b/deimos/package.json
@@ -26,7 +26,7 @@
   },
   "devDependencies": {
     "@emotion/babel-plugin": "^11.11.0",
-    "@types/react": "^18.3.1",
+    "@types/react": "18.3.3",
     "@types/react-dom": "^18.3.0"
   }
 }
