--- a/docs/package.json
+++ b/docs/package.json
@@ -23,7 +23,7 @@
     "@deities/ui": "workspace:*",
     "@emotion/babel-plugin": "^11.11.0",
     "@emotion/css": "^11.11.2",
-    "@types/react": "^18.3.1",
+    "@types/react": "18.3.3",
     "dunkel-theme": "^1.7.1",
     "fbt": "^1.0.2",
     "framer-motion": "^11.1.9",
