--- a/hera/package.json
+++ b/hera/package.json
@@ -30,7 +30,7 @@
     "react-fps": "^1.0.6"
   },
   "devDependencies": {
-    "@types/react": "^18.3.1",
+    "@types/react": "18.3.3",
     "@types/react-dom": "^18.3.0"
   }
 }
