--- a/ui/package.json
+++ b/ui/package.json
@@ -26,7 +26,7 @@
   },
   "devDependencies": {
     "@types/howler": "^2.2.11",
-    "@types/react": "^18.3.1",
+    "@types/react": "18.3.3",
     "@types/react-dom": "^18.3.0"
   }
 }
