--- a/artemis/package.json
+++ b/artemis/package.json
@@ -27,7 +27,7 @@
     "@pothos/plugin-directives": "^3.10.2",
     "@pothos/plugin-prisma": "^3.65.1",
     "@pothos/plugin-relay": "^3.46.0",
-    "@prisma/client": "^5.13.0",
+    "@prisma/client": "5.17.0",
     "@quixo3/prisma-session-store": "^3.1.13",
     "@types/express-session": "^1.18.0",
     "body-parser": "^1.20.2",
@@ -67,7 +67,7 @@
     "@types/web-push": "^3.6.3",
     "glob": "10.3.14",
     "p-limit": "^5.0.0",
-    "prisma": "^5.13.0",
+    "prisma": "5.17.0",
     "prisma-json-types-generator": "^3.0.4",
     "terminal-link": "^3.0.0"
   },
